Added margin to the body

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 This is the demo for Git
 the demoo
 This is the shit
+added margin for the body
 Thiss is the shit 2
 change fontr size
 change font size for p
